crates/uitest/fixtures/mir_check/borrowck_read_field_under_mut.snap
---
source: crates/uitest/tests/mir_check.rs
assertion_line: 32
expression: res
input_file: fixtures/mir_check/borrowck_read_field_under_mut.fe
---
error[10-0002]: borrow conflict in `fn borrowck_read_field_under_mut`
   ┌─ borrowck_read_field_under_mut.fe:11:5
   │
10 │     let p: mut u256 = mut s.a
   │                           --- borrow created here
11 │     let y: u256 = s.a
   │     ^^^^^^^^^^^^^^^^^ access overlaps an active `mut` borrow
